--- a/stylesheets/sass/app.scss
+++ b/stylesheets/sass/app.scss
@@ -6,7 +6,8 @@
 @import 'partials/header_body_footer';
 @import 'partials/work1';
 @import 'partials/work2';
-
+@import 'partials/work4';
+@import 'partials/work6';
 
 //on page load
 .bodyFadeIn-appear {
