--- a/stylesheets/sass/partials/_work4.scss
+++ b/stylesheets/sass/partials/_work4.scss
@@ -1,4 +1,4 @@
-.Work1Text {
+.Work4Text {
   @include pm {margin-top: 125px;}
   display: flex;
   flex-direction: column;
@@ -15,7 +15,7 @@
     margin: 20px 0 20px 0;
   }
   > p {
-    @include pm {width: calc(420px + 20vw);}
+    @include pm {width: calc(470px + 20vw);}
     color: black;
     font-weight: 150;
     line-height: 35px;
@@ -24,41 +24,34 @@
   }
 }
 
-.Work1Img1-Mobile {
-  @include pm {display: none;}
+.Work4Img1-Mobile {
   display: flex;
   justify-content: center;
-  margin: 100px auto 10px auto;
+  margin: 50px auto 10px auto;
   img {
-    height: calc(100% - 5vw);
-    width: calc(100% - 5vw);
-  }
-}
-.Work1Img2-Mobile {
-  @include pm {display: none;}
-  display: flex;
-  justify-content: center;
-  img {
-    height: calc(100% - 5vw);
-    width: calc(100% - 5vw);
+    @include md {width: calc(100% - 55vw);}
+    height: calc(100% - 35vw);
+    width: calc(100% - 35vw);
   }
 }
 
-.Work1Img1-Desktop {
-  @include pm {
+
+.Work4Imgs-Mobile {
+    @include pm {margin: 100px 0;}
     display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
     justify-content: center;
-    margin-top: 200px;
-    margin: 100px auto 10px auto;
+    margin: 50px 0px;
     img {
-      @include pm {width: calc(100% - 10vw);}
-      height: calc(100% - 2vw);
-      width: calc(100% - 2vw);
+      @include ph {margin: 0 100px;}
+      @include pm {margin: 0 20px;}
+      margin: 0 40px;
+      width: calc(100px + 10vw);
+      height: calc(100px + 10vw);
     }
-  }
-  display: none;
 }
-.Work1Img2-Desktop {
+.Work4Img2-Desktop {
   @include pm {
     display: flex;
     justify-content: center;
@@ -72,11 +65,11 @@
   display: none;
 }
 
-.boldP {
+.Work4boldP {
   @include md {
     font-size: 35px;
     line-height: 50px;
-    margin: 200px calc(50px + 15vw);
+    margin: 100px calc(50px + 15vw) 0 calc(50px + 15vw) ;
   }
   span {
     font-family: $work-title-font;
@@ -85,12 +78,14 @@
   font-family: $work-title-font;
   font-size: 20px;
   font-weight: 100;
-  margin: 100px 50px;
+  margin: 50px 50px;
   line-height: 30px;
   text-align: center;
 }
 
-.Work1links {
+
+
+.Work4links {
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
