--- a/stylesheets/sass/partials/_work.scss
+++ b/stylesheets/sass/partials/_work.scss
@@ -19,6 +19,7 @@
         font-size: 270%;
         line-height: 55px;
       }
+      // font-family: $work-title-font;
       font-size: 180%;
       font-weight: $font-bold;
       line-height: 35px;
@@ -44,6 +45,10 @@
     margin: 0;
     position: relative;
     width: 23em;
+    transition: background-color .5s ease-out;
+    -moz-transition: background-color .5s ease-out;
+    -webkit-transition: background-color .5s ease-out;
+    -o-transition: background-color .5s ease-out;
     &:hover {
       background-color: black;
       p {
@@ -79,12 +84,12 @@
       width: 100%;
       height: 100%;
     }
+    transition: opacity .5s ease-out;
+    -moz-transition: opacity .5s ease-out;
+    -webkit-transition: opacity .5s ease-out;
+    -o-transition: opacity .5s ease-out;
     &:hover {
       opacity: .3;
-      transition: opacity .5s ease-out;
-      -moz-transition: opacity .5s ease-out;
-      -webkit-transition: opacity .5s ease-out;
-      -o-transition: opacity .5s ease-out;
     }
   }
 }
@@ -108,6 +113,10 @@
       width: calc(51% - 2vw);
       height: calc(51% - 2vw);
     }
+    transition: background-color .5s ease-out;
+    -moz-transition: background-color .5s ease-out;
+    -webkit-transition: background-color .5s ease-out;
+    -o-transition: background-color .5s ease-out;
     &:hover {
       background-color: black;
       p {
@@ -138,12 +147,12 @@
     height: 23em;
     margin: 0;
     width: 23em;
+    transition: opacity .5s ease-out;
+    -moz-transition: opacity .5s ease-out;
+    -webkit-transition: opacity .5s ease-out;
+    -o-transition: opacity .5s ease-out;
     &:hover {
       opacity: .3;
-      transition: opacity .5s ease-out;
-      -moz-transition: opacity .5s ease-out;
-      -webkit-transition: opacity .5s ease-out;
-      -o-transition: opacity .5s ease-out;
     }
   }
 }
@@ -154,7 +163,7 @@
     display: flex;
     flex-wrap: wrap;
     justify-content: space-around;
-    margin: 16px 10px;
+    margin: 25px 10px;
   }
   display: none;
   p {display:none;}
@@ -168,6 +177,10 @@
       text-align: center;
       width: calc(100% - 2vw);
     }
+    transition: background-color .5s ease-out;
+    -moz-transition: background-color .5s ease-out;
+    -webkit-transition: background-color .5s ease-out;
+    -o-transition: background-color .5s ease-out;
     &:hover {
       background-color: black;
       p {
@@ -198,12 +211,12 @@
       width: calc(102% - 2vw);
       margin-bottom: 0px;
     }
+    transition: opacity .5s ease-out;
+    -moz-transition: opacity .5s ease-out;
+    -webkit-transition: opacity .5s ease-out;
+    -o-transition: opacity .5s ease-out;
     &:hover {
       opacity: .3;
-      transition: opacity .5s ease-out;
-      -moz-transition: opacity .5s ease-out;
-      -webkit-transition: opacity .5s ease-out;
-      -o-transition: opacity .5s ease-out;
     }
   }
 }
