--- a/stylesheets/css/app.css
+++ b/stylesheets/css/app.css
@@ -106,6 +106,7 @@
         -o-transition: opacity .5s ease-out; }
   .image-row1 p, .image-row3 p {
     position: absolute;
+    text-align: center;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%); }
@@ -169,6 +170,7 @@
   .image-row2-mobile p, .image-row4-mobile p {
     left: 50%;
     position: absolute;
+    text-align: center;
     top: 50%;
     transform: translate(-50%, -50%); }
   .image-row2-mobile img, .image-row4-mobile img {
@@ -406,10 +408,10 @@ footer {
     font-family: "Merriweather", serif;
     font-weight: 100;
     font-size: 280%;
-    margin: 0px 0; }
+    margin: 0; }
   .Work1Text h3 {
     color: #FF4225;
-    margin: 20px 0 20px 0; }
+    margin: 20px 0; }
   .Work1Text > p {
     color: black;
     font-weight: 150;
@@ -558,10 +560,10 @@ footer {
     font-family: "Merriweather", serif;
     font-weight: 100;
     font-size: 280%;
-    margin: 0px 0; }
+    margin: 0; }
   .Work4Text h3 {
     color: #FF4225;
-    margin: 20px 0 20px 0; }
+    margin: 20px 0; }
   .Work4Text > p {
     color: black;
     font-weight: 150;
@@ -658,10 +660,10 @@ footer {
     font-family: "Merriweather", serif;
     font-weight: 100;
     font-size: 280%;
-    margin: 0px 0; }
+    margin: 0; }
   .Work6Text h3 {
     color: #FF4225;
-    margin: 20px 0 20px 0; }
+    margin: 20px 0; }
   .Work6Text > p {
     color: black;
     font-weight: 150;
@@ -678,7 +680,7 @@ footer {
   flex-wrap: wrap;
   flex-direction: row;
   justify-content: center;
-  margin: 100px auto; }
+  margin: 0 0 100px 0; }
   @media (min-width: 990px) {
     .Work6ImgReviews-Mobile {
       display: none; } }
@@ -697,8 +699,8 @@ footer {
       justify-content: center;
       margin: 100px 0; }
       .Work6ImgReviews-Desktop img {
-        margin-bottom: 30px;
         height: calc(330px + 13vw);
+        margin-bottom: 30px;
         width: calc(580px + 13vw); } }
 
 .Work6Imgs {
@@ -711,9 +713,9 @@ footer {
     .Work6Imgs {
       margin: 100px calc(50px + 10vw); } }
   .Work6Imgs img {
+    height: calc(150px);
     margin: 15px 15px;
-    width: calc(150px);
-    height: calc(150px); }
+    width: calc(150px); }
 
 .Work6Img1 {
   margin: 0 calc(10px + 6vw); }
@@ -721,22 +723,23 @@ footer {
     .Work6Img1 {
       margin: 100px calc(10px + 20vw); } }
   .Work6Img1 img {
-    margin-bottom: 30px;
-    width: 100%;
-    height: 100%; }
+    height: 100%;
+    width: 100%; }
+  .Work6Img1 img:not(:last-child) {
+    margin-bottom: 30px; }
 
 .Work6boldP {
   font-family: "Merriweather", serif;
   font-size: 20px;
   font-weight: 100;
-  margin: 50px 50px;
   line-height: 30px;
+  margin: 75px 50px;
   text-align: center; }
   @media (min-width: 769px) {
     .Work6boldP {
       font-size: 35px;
       line-height: 50px;
-      margin: 100px calc(50px + 15vw) 0 calc(50px + 15vw); } }
+      margin: 125px calc(50px + 20vw); } }
   .Work6boldP span {
     font-family: "Merriweather", serif;
     font-weight: 700; }
