--- a/stylesheets/sass/partials/_work.scss
+++ b/stylesheets/sass/partials/_work.scss
@@ -71,6 +71,7 @@
   }
   p {
    position: absolute;
+   text-align: center;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
@@ -140,6 +141,7 @@
   p {
     left: 50%;
     position: absolute;
+    text-align: center;
     top: 50%;
     transform: translate(-50%, -50%);
   }
