--- a/stylesheets/sass/partials/_work1.scss
+++ b/stylesheets/sass/partials/_work1.scss
@@ -8,11 +8,11 @@
     font-family: $work-title-font;
     font-weight: $font-light;
     font-size: 280%;
-    margin: 0px 0;
+    margin: 0;
   }
   h3 {
     color: $red;
-    margin: 20px 0 20px 0;
+    margin: 20px 0;
   }
   > p {
     @include pm {width: calc(420px + 20vw);}
