--- a/stylesheets/sass/partials/_work6.scss
+++ b/stylesheets/sass/partials/_work6.scss
@@ -8,11 +8,11 @@
     font-family: $work-title-font;
     font-weight: $font-light;
     font-size: 280%;
-    margin: 0px 0;
+    margin: 0;
   }
   h3 {
     color: $red;
-    margin: 20px 0 20px 0;
+    margin: 20px 0;
   }
   > p {
     color: black;
@@ -35,7 +35,7 @@
   flex-wrap: wrap;
   flex-direction: row;
   justify-content: center;
-  margin: 100px auto;
+  margin: 0 0 100px 0;
   img {
     margin: 15px 15px;
     height: 380px;
@@ -51,8 +51,8 @@
     justify-content: center;
     margin: 100px 0;
     img {
-      margin-bottom: 30px;
       height: calc(330px + 13vw);
+      margin-bottom: 30px;
       width: calc(580px + 13vw);
     }
   }
@@ -67,9 +67,9 @@
   justify-content: center;
   margin-top: 100px;
   img {
+    height: calc(150px);
     margin: 15px 15px;
     width: calc(150px);
-    height: calc(150px);
   }
 }
 
@@ -77,9 +77,11 @@
   @include md {margin: 100px calc(10px + 20vw);}
   margin: 0 calc(10px + 6vw);
   img {
-    margin-bottom: 30px;
-    width: 100%;
     height: 100%;
+    width: 100%;
+  }
+  img:not(:last-child) {
+    margin-bottom: 30px;
   }
 }
 
@@ -87,7 +89,7 @@
   @include md {
     font-size: 35px;
     line-height: 50px;
-    margin: 100px calc(50px + 15vw) 0 calc(50px + 15vw) ;
+    margin: 125px calc(50px + 20vw);
   }
   span {
     font-family: $work-title-font;
@@ -96,8 +98,8 @@
   font-family: $work-title-font;
   font-size: 20px;
   font-weight: 100;
-  margin: 50px 50px;
   line-height: 30px;
+  margin: 75px 50px;
   text-align: center;
 }
 
